--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -40,6 +40,11 @@
               Agency Summary
             </a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link text-white" href="{{ url_for('agency_summary.manage_agencies') }}">
+              Manage Agencies
+            </a>
+          </li>
           
           <li class="nav-item">
             <a class="nav-link text-white" href="{{ url_for('dashboard.wage_rates') }}">Wage Rates</a>
